# Where2Eat-BE

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/api/: routers.py
src/application/: dtos.py  services.py
src/core/: config.py
src/domain/: entities.py  repositories.py
src/infrastructure/: db.py  repositories_impl.py
test/functional/: test_regions.py
tests/: conftest.py
tests/functional/: test_regions.py
