[project]
name = "where2eat-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
